--- a/Monopoly/Base.lproj/Main.storyboard
+++ b/Monopoly/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
         <!--Menu View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MNPMenuViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="menuViewController" id="BYZ-38-t0r" customClass="MNPMenuViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -51,7 +51,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="9JV-ZG-l6Q" kind="push" id="Wek-Js-SYM"/>
+                                    <action selector="playButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Tm0-oN-DLO"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sa0-Sz-8tz">
@@ -65,7 +65,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="yMr-TZ-mzt" kind="push" id="Lxz-dL-iOk"/>
+                                    <action selector="settingsButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="82h-88-goz"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Monopoly" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6V-vk-5Mv">
@@ -119,7 +119,7 @@
         <!--Monopoly-->
         <scene sceneID="caB-6i-cSo">
             <objects>
-                <viewController id="9JV-ZG-l6Q" customClass="MNPGameViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="gameViewController" id="9JV-ZG-l6Q" customClass="MNPGameViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="myj-iP-c4Q"/>
                         <viewControllerLayoutGuide type="bottom" id="pJJ-Pb-7iC"/>
@@ -159,6 +159,20 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rpW-pN-7Md">
+                                <rect key="frame" x="619" y="28" width="116" height="36"/>
+                                <color key="backgroundColor" red="0.95686274510000002" green="0.17867353657585894" blue="0.18965901355866741" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Exit Game">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="exitButtonPressed:" destination="9JV-ZG-l6Q" eventType="touchUpInside" id="rGQ-ls-ejL"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bR4-Qc-K3W">
+                                <rect key="frame" x="192" y="28" width="80" height="80"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -169,11 +183,13 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Monopoly" id="eKL-gX-DsA"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
                     <connections>
                         <outlet property="actionButton" destination="nfX-vj-fWc" id="Dj5-w2-5bx"/>
                         <outlet property="boardImageView" destination="G4l-8J-qI2" id="wlA-Hw-QGC"/>
                         <outlet property="currentPlayerCashLbl" destination="QD0-eC-r9l" id="vA0-eZ-O4n"/>
                         <outlet property="currentPlayerNameLbl" destination="g8P-4P-b4w" id="YGr-Mg-61C"/>
+                        <outlet property="currentPlayerToken" destination="bR4-Qc-K3W" id="Ecb-hq-UGr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u26-uj-o0v" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -183,7 +199,7 @@
         <!--Settings-->
         <scene sceneID="69U-hM-ejK">
             <objects>
-                <viewController id="yMr-TZ-mzt" customClass="MNPSettingsViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="settingsViewController" id="yMr-TZ-mzt" customClass="MNPSettingsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iwY-UC-ZI8"/>
                         <viewControllerLayoutGuide type="bottom" id="05J-CB-BTL"/>
@@ -339,6 +355,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Settings" id="LAZ-vV-1rh"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
                     <connections>
                         <outlet property="countPlayers" destination="IEs-8Y-ebl" id="bFg-rR-OlD"/>
                         <outlet property="firstPlayerIcon" destination="bu2-xh-w7d" id="SHQ-B2-wKP"/>
